--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,3 +1,3 @@
 option_settings:
   "aws:elasticbeanstalk:container:python":
-    WSGIPath: application:application  # This tells to beanstalk that where to start the project 
+    WSGIPath: application:application  
